--- a/style/styles.css
+++ b/style/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
 }
 body {
+  background-color: rgb(180, 186, 201);
   width: 100vw;
   margin: 0;
   display: flex;
@@ -17,7 +18,7 @@ body {
   max-width: 500px;
   margin: 0 auto;
   position: relative;
-  display: none;
+  /* display: none; */
 }
 .intro-container {
   position: relative;
@@ -33,6 +34,7 @@ body {
 }
 .start-game-btn {
   font-size: 22px;
+  background-color: rgb(226, 161, 41);
   position: absolute;
   bottom: 20px;
   left: 1px;
@@ -46,6 +48,7 @@ body {
 }
 .high-score {
   font-size: 22px;
+  background-color: rgb(180, 58, 180);
   position: absolute;
   bottom: 20px;
   right: 0px;
@@ -72,7 +75,7 @@ body {
 #inGame-container {
   position: relative;
   width: 100%;
-  /* display: none; */
+  display: none;
   max-width: 500px;
   margin: 0 auto;
 }
@@ -80,4 +83,7 @@ body {
   width: 100%;
   height: 660px;
   border: 2px solid black;
+}
+.haseeCharacter {
+  width: 10%;
 }
