--- a/style/styles.css
+++ b/style/styles.css
@@ -246,3 +246,11 @@ h1 {
 .sound-on {
   display: none;
 }
+
+.falling-fruit {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: 100px; 
+  /* Add any other styling you need for the fruits */
+}
