--- a/style/styles.css
+++ b/style/styles.css
@@ -110,7 +110,7 @@ body {
   /* position: absolute; */
   /* bottom: 10px; */
   left: 210px;
-  background-image: url("./editedDoughnutfruits/haseeAndBasket.png");
+  background-image: url("../editedDoughnutfruits/haseeAndBasket.png");
   background-size: cover;
   box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.275);
 }
