--- a/style/styles.css
+++ b/style/styles.css
@@ -153,13 +153,13 @@ body {
 
 #score-screen {
   margin-top: 186px;
-  background-image: url("/Neopets-Doughnutfruits/neopetsScore.png");
+  background-image: url("../Neopets-Doughnutfruits/neopetsScore.png");
   background-image: linear-gradient(
       45deg,
       rgba(98, 0, 255, 0.815),
       rgba(251, 206, 6, 0.995)
     ),
-    url("/Neopets-Doughnutfruits/neopetsScore.png");
+    url("../Neopets-Doughnutfruits/neopetsScore.png");
 
   background-size: contain;
 
