--- a/style/styles.css
+++ b/style/styles.css
@@ -44,7 +44,7 @@ body {
   position: absolute;
   bottom: 20px;
   left: 1px;
-  padding: 10px 60px;
+  padding: 10px 56px;
   margin: 10px;
   border: none;
   border-radius: 5px;
@@ -64,7 +64,7 @@ body {
   position: absolute;
   bottom: 20px;
   right: 0px;
-  padding: 10px 60px;
+  padding: 10px 53px;
   margin: 10px;
   border: none;
   border-radius: 5px;
@@ -122,12 +122,12 @@ body {
   background-size: contain;
   position: absolute;
   bottom: 630px;
-  left: 460px;
+  left: 360px;
 }
 .points {
   font-family: "Montserrat";
   position: absolute;
-  left: 430px;
+  left: 330px;
   bottom: 632px;
   font-size: 18px;
   color: rgb(251, 234, 3);
@@ -152,7 +152,7 @@ body {
 /* /////////SCORE-SCREEN////////// */
 
 #score-screen {
-  margin-top: 186px;
+  margin-top: 155px;
   background-image: url("../Neopets-Doughnutfruits/neopetsScore.png");
   background-image: linear-gradient(
       45deg,
@@ -163,8 +163,8 @@ body {
 
   background-size: contain;
 
-  width: 496px;
-  height: 656px;
+  width: 400px;
+  height: 616px;
   border: 2px solid black;
   display: none;
   position: relative;
@@ -210,7 +210,7 @@ h1 {
   bottom: 20px;
 
   padding: 5px 30px;
-  left: 175px;
+  left: 130px;
   border-radius: 5px;
   cursor: pointer;
   border: 2px solid rgb(255, 255, 255);
@@ -228,7 +228,7 @@ h1 {
 }
 .score-title {
   position: absolute;
-  top: -185px;
+  top: -152px;
 }
 
 /* /////////Sound/////// */
@@ -275,20 +275,21 @@ h1 {
   position: relative;
 }
 .cry {
-  width: 500px;
+  width: 400px;
+  height: 600px;
   border-bottom: 2px solid black;
 }
 .finished {
   position: relative;
   text-align: center;
   background-color: rgba(215, 29, 29, 0.969);
-  padding: 20px;
+  padding: 16px;
   border-radius: 8px;
-  bottom: 550px;
+  bottom: 575px;
   font-family: "Montserrat";
 }
 .back-menu {
-  width: 500px;
+  width: 400px;
   padding: 20px;
   position: absolute;
   bottom: 45px;
@@ -322,7 +323,7 @@ h1 {
   padding: 20px;
   border-radius: 8px;
   bottom: 350px;
-  right: 140px;
+  right: 80px;
   color: rgb(255, 255, 255);
   font-family: "Montserrat";
 }
@@ -335,7 +336,26 @@ h1 {
   padding: 20px;
   border-radius: 8px;
   bottom: 300px;
-  right: 205px;
+  right: 145px;
   color: rgb(71, 255, 4);
   font-family: "Montserrat";
+}
+
+.left-btn {
+  width: 45px;
+  position: absolute;
+  bottom: 5px;
+
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.227);
+  padding: 1px 12px;
+}
+.right-btn {
+  cursor: pointer;
+  position: absolute;
+  width: 45px;
+  left: 350px;
+  bottom: 5px;
+  padding: 1px 12px;
+  background-color: rgba(255, 255, 255, 0.227);
 }
